--- a/source/assets/stylesheets/regions/_post.scss
+++ b/source/assets/stylesheets/regions/_post.scss
@@ -26,7 +26,7 @@
 
 .post-content {
     $margin: 1em;
-    padding: 0 0 $gutter-outside;
+    padding-bottom: $gutter-outside;
 
     * + * { margin-top: 1em; }
 
@@ -43,13 +43,14 @@
     }
 
     > ul {
-        @extend .l-wrapper;
+        // @extend .l-wrapper;
         @extend .gallery;
         // @extend .gallery.l-wrapper;
-        @include rem(margin-top, fs(4));
-        margin-left: auto;
-        margin-right: auto;
+        @include rem(margin-top, fs(8));
+        // margin-left: auto;
+        // margin-right: auto;
     }
+
     li { @extend .gallery-item; }
 }
 
